objects/LLC_BI__Spread_Statement_Record__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Cloned_Source_Row__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a row is cloned from a Spreads Statement Record, the system auto-populates this optional lookup field with the row id.</description>
        <label>Cloned Source Row</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Row Clones</relationshipLabel>
        <relationshipName>Row_Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is driven by user selection within the spreading application. When enabled, the spread statement record (chart of account) is treated as a debit. When disabled, the spread statement record is treated as a credit. By default, it is disabled.</description>
        <label>Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Display_Type__c</fullName>
        <description>This field is required and automatically updated. Determines display of Spread Statement Record.</description>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                    <default>true</default>
                    <label>Use Group Type</label>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Formula_Long_Text__c</fullName>
        <description>Users populate this optional text field with a formula that defines the values in the Spreads row. By default, it is blank.</description>
        <label>Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Formula__c</fullName>
        <description>Formula that determines the values in the row.</description>
        <label>Formula -D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Include_In_Total__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is optional. It is driven by user selection within the spreading application. When enabled, the spread statement record (chart of account) will not be displayed in the group and will not be used as part of the group&apos;s calculation. When disabled, it is display and used in the calculation. By default, it is disabled.</description>
        <label>Include In Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Linked__c</fullName>
        <description>This field is optional. It is populated automatically based on whether the &quot;LLC_BI__Spread_Statement_Record_Total__c&quot; and &quot;LLC_BI__Spread_Statement_Record__c&quot; fields have values. It tells the system whether the spread statement record (chart of account) is pulling its value from another chart of account or group total. If either of those fields have a value, this is enabled, otherwise it is disabled. If enabled, values cannot be manually entered for this record. By default, it is disabled.</description>
        <formula>NOT(AND( ISBLANK( LLC_BI__Linked_Spread_Statement_Record__c ) ,ISBLANK(  LLC_BI__Linked_Spread_Statement_Total_Group__c  )))</formula>
        <label>Is Linked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__KPI_Type__c</fullName>
        <description>This field is optional. It is driven by user selections within the spreading application. When &quot;Standard Highlight&quot; is selected, the spread statement record (chart of account) is treated as a highlight that cannot be deselected by a user. When &quot;User Highlight&quot; is selected, the spread statement record can be deselected by a user. If neither are selected, the spread statement record is not treated as a highlight. By default, this picklist does not have either selected. None</description>
        <label>Highlights Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Highlight</fullName>
                </value>
                <value>
                    <fullName>User Highlight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Linked_Spread_Statement_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and manually updated. If set then this spread statement record is read-only and linked to the referenced spread statement record.</description>
        <label>Linked Spread Statement Record</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Spread Statement Records</relationshipLabel>
        <relationshipName>Spread_Statement_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Linked_Spread_Statement_Total_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and manually updated. If set then this spread statement record is read-only and linked to the referenced spread statement total group.</description>
        <label>Linked Spread Statement Total Group</label>
        <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
        <relationshipLabel>Spread Statement Records (Linked Spread Statement Total Group)</relationshipLabel>
        <relationshipName>Spread_Statement_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operation_Add__c</fullName>
        <description>This field is optional. It is driven by the &quot;LLC_BI__Operation__c&quot; field. When enabled, the value for this spread statement record (chart of account) is added to the currently calculated value in the group. When disabled, this field does nothing. This field is enabled whenever &quot;LLC_BI__Operation__c&quot; is blank or set to &quot;ADD&quot;</description>
        <formula>OR( ISBLANK( TEXT(LLC_BI__Operation__c) ) ,ISPICKVAL(LLC_BI__Operation__c, &apos;ADD&apos;))</formula>
        <label>Operation Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operation_Divide__c</fullName>
        <description>This field is optional. It is driven by the &quot;LLC_BI__Operation__c&quot; field. When enabled, the currently calculated value in the group is divided by the value for this spread statement record (chart of account). When disabled, this field does nothing. This field is enabled whenever &quot;LLC_BI__Operation__c&quot; is set to &quot;DIVIDE&quot;</description>
        <formula>ISPICKVAL(LLC_BI__Operation__c, &apos;DIVIDE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation Divide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operation_Multiply__c</fullName>
        <description>This field is optional. It is driven by the &quot;LLC_BI__Operation__c&quot; field. When enabled, the value for this spread statement record (chart of account) is multiplied to the currently calculated value in the group. When disabled, this field does nothing. This field is enabled whenever &quot;LLC_BI__Operation__c&quot; is &quot;MULTIPLY&quot;</description>
        <formula>ISPICKVAL(LLC_BI__Operation__c, &apos;MULTIPLY&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation Multiply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operation_Subtract__c</fullName>
        <description>This field is optional. It is driven by the &quot;LLC_BI__Operation__c&quot; field. When enabled, the currently calculated value in the group is subtracted by the value for this spread statement record (chart of account). When disabled, this field does nothing. This field is enabled whenever &quot;LLC_BI__Operation__c&quot; is set to &quot;SUBTRACT&quot;</description>
        <formula>ISPICKVAL(LLC_BI__Operation__c, &apos;SUBTRACT&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation Subtract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operation__c</fullName>
        <description>This field is optional. It is driven by user selection within the spreading application. It indicates what type of mathematical operation should be performed on the spread statement record (chart of account) this spread statement record represents.</description>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADD</fullName>
                    <default>true</default>
                    <label>ADD</label>
                </value>
                <value>
                    <fullName>SUBTRACT</fullName>
                </value>
                <value>
                    <fullName>MULTIPLY</fullName>
                </value>
                <value>
                    <fullName>DIVIDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Period_Over_Period_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. User updated. This field indicates whether the record values should show as a period over period change.</description>
        <inlineHelpText>Check this field to calculate period over period change</inlineHelpText>
        <label>Period Over Period Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Period_Over_Prior_Fiscal_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. User updated. This field indicates whether the record values should show the period over fiscal year change of the linked record.</description>
        <inlineHelpText>Check this field to calculate the period over prior fiscal year.</inlineHelpText>
        <label>Period Over Prior Fiscal Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prior_Fiscal_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. User updated. When checked, linked records will populate any period in a certain year with the value of the period marked as fiscal year in the previous year.</description>
        <label>Prior Fiscal Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Record_Type__c</fullName>
        <description>This field is required. It is driven by user selected within the spreading application. It specifies the type of spread statement record (chart of account). &quot;Standard&quot; is the default selection, it is editable and relies on either user entry or links to function. &quot;Days In Period&quot; is non-editable and displays the days based on the statement date &amp; number of months. &quot;Debt Service&quot; is non-editable and displays the total debt service from the debt schedule. &quot;Rent Roll Annual Income&quot; is non-editable and displays the annual income from the rent roll within CRE. &quot;Simulated&quot; is non-editable and allows the spread statement record to be calculated via a formula, dictated by an attachment on the LLC_BI__Spread__c. By default, this is set to &quot;Standard&quot;</description>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Days In Period</fullName>
                </value>
                <value>
                    <fullName>Debt Service</fullName>
                </value>
                <value>
                    <fullName>Rent Roll Annual Income</fullName>
                </value>
                <value>
                    <fullName>Simulated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Row_Number__c</fullName>
        <description>This field is optional. It is automatically set whenever a spread statement record (chart of account) is created in the spreading applicaiton. This field determines the order the spread statement records will be displayed within the group. This cannot be edited within the spreading application, it must be edited through the Salesforce interface.</description>
        <label>Row Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source_Row__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system auto-populates this optional lookup field with the id of the cloned row from the Spreads Statement Record template.</description>
        <label>Source Row</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Cloned Spread Statement Records</relationshipLabel>
        <relationshipName>Cloned_Spread_Statement_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record_Total__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is populated automatically whenever the spread statement record (chart of account) is linked to a spread statement record total (group total). This field specifies the spread Statement record total associated with the Spread Statement record. When linked, this spread statement record will always display the values of the spread statement record total it is linked to.</description>
        <label>Spread Statement Record Total</label>
        <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
        <relationshipLabel>Spread Statement Records</relationshipLabel>
        <relationshipName>Spread_Statement_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Type__c</fullName>
        <description>This field is optional. It is populated automatically whenever the spread statement record (chart of account) is linked to a spread statement record. This field specifies the spread Statement record associated with the Spread Statement record. When linked, this spread statement record will always display the values of the spread statement record it is linked to.</description>
        <label>Spread Statement Type</label>
        <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
        <relationshipLabel>Spread Statement Records</relationshipLabel>
        <relationshipName>Spread_Statement_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Spread Statement Record</label>
    <nameField>
        <label>Spread Statement Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spread Statement Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Cannot_calculate_period_over_period_val</fullName>
        <active>false</active>
        <description>Validation to ensure that we do not try to calculate period over period values for none linked records</description>
        <errorConditionFormula>AND(NOT(LLC_BI__Is_Linked__c), LLC_BI__Period_Over_Period_Change__c)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Period_Over_Period_Change__c</errorDisplayField>
        <errorMessage>Cannot calculate period over period values for none linked records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Cannot_link_to_Record_and_a_Total_Group</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
NOT(ISBLANK( LLC_BI__Linked_Spread_Statement_Record__c )),
NOT(ISBLANK( LLC_BI__Linked_Spread_Statement_Total_Group__c ))
)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Linked_Spread_Statement_Record__c</errorDisplayField>
        <errorMessage>You may link to a Record or a Total Group, but not both.</errorMessage>
    </validationRules>
</CustomObject>